RESOLVED FIXED238056
[Apple Pay] REGRESSION(r283431): `HAVE_PASSKIT_PAYMENT_METHOD_BILLING_ADDRESS` was removed without also removing where it was used
https://bugs.webkit.org/show_bug.cgi?id=238056
Summary [Apple Pay] REGRESSION(r283431): `HAVE_PASSKIT_PAYMENT_METHOD_BILLING_ADDRESS...
Devin Rousso
Reported 2022-03-17 16:19:54 PDT
.
Attachments
[fast-cq] Patch (2.08 KB, patch)
2022-03-17 16:22 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2022-03-17 16:20:29 PDT
Devin Rousso
Comment 2 2022-03-17 16:22:54 PDT
Created attachment 455041 [details] [fast-cq] Patch
EWS
Comment 3 2022-03-17 17:09:39 PDT
Committed r291451 (248574@main): <https://commits.webkit.org/248574@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 455041 [details].
Note You need to log in before you can comment on or make changes to this bug.