[Apple Pay] REGRESSION(r283431): `HAVE_PASSKIT_PAYMENT_METHOD_BILLING_ADDRESS` was removed without also removing where it was used https://bugs.webkit.org/show_bug.cgi?id=238056 <rdar://problem/89940620>

Reviewed by Tim Horton.

* Modules/applepay/cocoa/PaymentMethodCocoa.mm:
(WebCore::convert):



Canonical link: https://commits.webkit.org/248574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291451 268f45cc-cd09-0410-ab3c-d52691b4dbfc